# frame-graph

./: Cargo.toml
src/: bind_group.rs  device_pass.rs  handle.rs  index.rs  lib.rs  pass_node.rs  pass_node_builder.rs  resource_node.rs  resource_table.rs  texture_view.rs
src/common/: color_attachment.rs  depth_stencil_attachment.rs  mod.rs  render_pass_info.rs  texel_copy_texture_info.rs  texture_view.rs
src/common/bind_group/: bind_group_binding.rs  bind_group_entry_binding.rs  bind_group_entry_handle.rs  bind_group_handle_builder.rs  bind_group_layout_entries.rs  mod.rs
src/common/meta/: buffer.rs  mod.rs  texture.rs
src/frame_graph/: index.rs  mod.rs  pass_node.rs  resource_node.rs  resource_table.rs  texture_view.rs
src/frame_graph/pass/: mod.rs
src/frame_graph/transient_resource/: mod.rs  texture.rs
src/gfx_base/: bind_group.rs  bind_group_layout.rs  buffer.rs  command_encoder.rs  mod.rs  pipeline_layout.rs  render_device.rs  render_pass.rs  sampler.rs  shader_module.rs  surface.rs  texture.rs  texture_view.rs
src/gfx_base/pipeline/: container.rs  mod.rs  render.rs
src/graph/: mod.rs
src/graph/pass_node_builder/: mod.rs  (+2 more)
src/pass/: mod.rs  render_pass.rs  render_pass_builder.rs
src/pass_node_builder/: mod.rs  render_pass_builder.rs
src/render_context/: compute_pass_context.rs  mod.rs  parameter.rs  render_pass_context.rs
src/resource/: bind_group_layout.rs  mod.rs
src/resource_context/: encoder.rs  encoder_pass_context.rs  mod.rs  parameter.rs  render_pass_context.rs
src/transient_resource/: buffer.rs  cache.rs  mod.rs  texture.rs
(+10 files in other folders)
