[package]
name = "frame-graph"
version = "0.1.0"
edition = "2024"

[features]
default = []
serde = ["dep:serde", "wgpu/serde"]

[dependencies]
wgpu = { version = "24", features = ["serde"], optional = false }
encase = { version = "0.10" }
tracing = { version = "0.1" }
serde = { version = "1.0", default-features = false, features = [
    "alloc",
    "derive",
], optional = true }
